--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,10 @@
   box-sizing: border-box;
 }
 
+#root {
+  overflow: hidden;
+}
+
 a {
   font-weight: 500;
   color: #646cff;
